<resources>
    <string name="app_name">TheFaith</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="username">Username</string>
    <string name="enter_code_here">Enter Code Here</string>
    <string name="verification_text">Enter the verification code sent to your Email</string>
    <string name="resend_code">Resend Code</string>
    <string name="verify">Verify</string>

    <string-array name="countries">
        <item>Uganda</item>
        <item>Nigeria</item>
    </string-array>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_friend_list">FriendListActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="about_me">Some text about me goes here. Am good,kind,hardworking, likes to read, play,
                            Some text about me goes here. Am good,kind,hardworking, likes to read, play,
                            Some text about me goes here. Am good,kind,hardworking, likes to read, play,
                            Some text about me goes here. Am good,kind,hardworking, likes to read, play,</string>
</resources>
