<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_unblock"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.afridevelopers.thefaith.UnblockActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/enter_code_here"
        android:gravity="center"
        android:textColor="@android:color/holo_red_light"
        android:layout_weight="10"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAlignment="center"
        android:textSize="25dp"
        android:paddingTop="50dp"
        android:textColor="@color/cardview_dark_background"
        android:text="@string/verification_text"
        android:layout_weight="30"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/resend_code"
        style="@style/loginBtn"
        android:background="@color/colorPrimary"
        android:layout_weight="7"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/verify"
        style="@style/loginBtn"
        android:background="@color/colorPrimary"
        android:layout_weight="7"/>

</LinearLayout>
