<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.afridevelopers.thefaith.LoginActivity">

    <android.support.v7.widget.CardView
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="5"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/colorPrimary"
        android:layout_marginTop="10dp"
        app:cardElevation="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:gravity="center"
            android:textAlignment="center"
            android:text="Enter Your details to log in below"/>

    </android.support.v7.widget.CardView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:id="@+id/username"
        android:gravity="center"
        android:hint="@string/username"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:id="@+id/password"
        android:gravity="center"
        android:hint="@string/password"/>

    <android.support.v7.widget.CardView
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="5"
        app:cardCornerRadius="20dp"
        android:id="@+id/login_btn"
        app:cardBackgroundColor="@color/colorPrimary"
        android:layout_marginTop="10dp"
        app:cardElevation="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/login"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="5"
        app:cardCornerRadius="20dp"
        android:id="@+id/create_password"
        app:cardBackgroundColor="@color/colorPrimary"
        android:layout_marginTop="10dp"
        app:cardElevation="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/create_account"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="5"
        app:cardCornerRadius="20dp"
        android:id="@+id/forgot_password"
        app:cardBackgroundColor="@android:color/holo_red_light"
        android:layout_marginTop="10dp"
        app:cardElevation="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/forgot_password"/>

    </android.support.v7.widget.CardView>




</LinearLayout>
